<resources>
    <string name="app_name">Explore Future</string>
    <string name="app_guide_start_future_btn_text">Start Future</string>
    <string name="app_refresh_btn_text">Refresh</string>
    <string name="app_no_data_text">Can not get data,Please Wait a minute!</string>
    <string name="app_add_attention_text">+ Attention</string>
    <string name="app_update_need_access_sdcard_permission_text">APP need the permission access SDCard for self update,please give the permission leave for settings!</string>
    <string name="app_update_need_access_phone_state_permission_text">APP need the permission access Phone State for self update,please give the permission leave for settings!</string>
    <string name="app_bottom_navigation_recommend_btn_text">Recommend</string>
    <string name="app_bottom_navigation_sort_btn_text">Sort</string>
    <string name="app_bottom_navigation_mind_btn_text">Mind</string>
    <string name="app_bottom_navigation_find_btn_text">Find</string>
    <string name="app_bottom_navigation_mine_btn_text">Mine</string>
    <string name="recommend_top_navigation_handpick_btn_text">ChoiceNess</string>
    <string name="recommend_top_navigation_attention_btn_text">Attention</string>
    <string name="recommend_top_navigation_mind_btn_text">Mind</string>
    <string name="recommend_handpick_solution_header_divider_title_text">Solution Recommend╱SOLUTION</string>
    <string name="recommend_handpick_action_header_divider_title_text">Action  Recommend╱ACTION</string>
    <string name="recommend_handpick_product_header_divider_title_text">Product  Recommend╱PRODUCT</string>
    <string name="recommend_handpick_interest_header_divider_title_text">Interest  Recommend╱INTEREST</string>
    <string name="recommend_handpick_header_divider_recommend_top_text">Recommend Top</string>
    <string name="recommend_attention_recommend_header_tip_text">May you want attention them</string>
    <string name="recommend_attention_recommend_header_update_text">update them</string>
    <string name="recommend_mind_topic_current_discuss_text">Discussing</string>
    <string name="recommend_mind_content_empty_text">He is Lazy,Say Nothing</string>
    <string name="recommend_mind_top_mind_navigation_hottest_btn_text">HOTTEST</string>
    <string name="recommend_mind_top_mind_navigation_newest_btn_text">NEWEST</string>
    <string name="search_product_hint_text">Search product or solution what you want</string>
    <string name="search_any_hint_text">Search product / solution / name / mind what you want</string>
    <string name="search_bar_cancel_btn_text">Cancel</string>
    <string name="search_bar_keyboard_enter_text">Search</string>
    <string name="search_clear_history_text">Clean Search History</string>
    <string name="search_history_empty_text">No search records are currently available</string>
    <string name="search_result_list_activity_top_navigation_title_text">\'%1$s\' search result</string>
    <string name="search_result_list_activity_top_sort_solution_btn_text">Solution</string>
    <string name="search_result_list_activity_top_sort_product_btn_text">Product</string>
    <string name="search_result_list_activity_top_sort_mind_btn_text">Mind</string>
    <string name="search_result_list_activity_top_sort_action_btn_text">Action</string>
    <string name="search_result_list_activity_top_sort_person_btn_text">User</string>
    <string name="sort_navigation_all_text">All</string>
    <string name="sort_level_one_title_more_text">more</string>
    <string name="mind_top_navigation_title_text">My Mind</string>
    <string name="mind_no_data_text">Absolutely Empty\nStart your first mind of the future!</string>
    <string name="mind_no_data_start_mind_btn_text">Create Mind</string>
    <string name="mind_list_item_release_btn_text">Release</string>
    <string name="mind_edit_top_navigation_title_text">Edit Mind</string>
    <string name="mind_edit_top_navigation_save_btn_text">Save</string>
    <string name="mind_edit_top_navigation_release_btn_text">Release</string>
    <string name="mind_edit_hint_text">Write your mind here</string>
    <string name="mind_edit_need_access_sdcard_permission_text">APP need the permission access SDCard for self get the image on your pone,please give the permission leave for settings!</string>
    <string name="mind_edit_choose_file_title_text">Select File</string>
    <string name="mind_edit_release_dialog_title_text">Release Tip</string>
    <string name="mind_edit_release_dialog_content_text">After Release,the content will can not modify\nAre you sure release?</string>
    <string name="mind_edit_release_dialog_positive_btn_text">Release</string>
    <string name="mind_edit_tip_full_dialog_content_text">Currently, the upper limit of uploaded images has been reached. If you want to add, please delete the pictures you added before</string>
    <string name="mind_edit_tip_full_dialog_positive_btn_text">I Know</string>
    <string name="mind_edit_tip_add_video_confirm_dialog_content_text">Pictures and video cannot be added at the same time. If you add video, all added pictures will be removed. Do you add video?</string>
    <string name="mind_edit_tip_add_picture_confirm_dialog_content_text">Pictures and video cannot be added at the same time. If you add picture, added video will be removed. Do you add picture?</string>
    <string name="mind_edit_tip_close_dialog_content_text">Your idea has not been saved yet. Do you need to save it?</string>
    <string name="dialog_title_tip_text">Tip</string>
    <string name="dialog_positive_btn_text">Sure</string>
    <string name="dialog_positive_save_btn_text">Save</string>
    <string name="dialog_negative_btn_text">Cancel</string>
    <string name="find_hot_search_title_text">Today Hot Search</string>
    <string name="find_hot_search_more_text">More Hot</string>
    <string name="find_hot_search_history_title_text">Search History</string>
    <string name="mine_fans_count_text"> %1$s Fans</string>
    <string name="mine_attention_count_text"> %1$s Attention</string>
    <string name="app_login_btn_text">Login</string>
    <string name="app_offline_tip_text">You are not logged in, please log in first</string>
    <string name="mine_interaction_history_btn_text">History</string>
    <string name="mine_interaction_comment_btn_text">Comment</string>
    <string name="mine_interaction_retransmission_btn_text">Retransmission</string>
    <string name="mine_interaction_collection_btn_text">Collection</string>
    <string name="mine_interaction_support_btn_text">Support</string>
    <string name="mine_order_title_text">My Order</string>
    <string name="mine_order_title_wait_payment_text">Wait Pay</string>
    <string name="mine_order_title_wait_shipment_text">Wait Ship</string>
    <string name="mine_order_title_wait_get_text">Wait Get</string>
    <string name="mine_order_title_wait_evaluate_text">Wait Evaluate</string>
    <string name="mine_order_title_after_sale_text">After Sale</string>
    <string name="mine_earnings_title_text">My Earnings</string>
    <string name="mine_total_earnings_text">Total Earnings(RMB)</string>
    <string name="mine_today_earnings_text">Today</string>
    <string name="settings_main_top_navigation_title_text">Settings</string>
    <string name="settings_main_receive_address_text">My Receive Address</string>
    <string name="settings_main_real_name_authentication_text">Real Name Authentication</string>
    <string name="settings_main_account_safe_text">Account Safe</string>
    <string name="settings_main_pay_settings_text">Pay Settings</string>
    <string name="settings_main_bind_account_text">Bind Account</string>
    <string name="settings_main_clean_catch_text">Clean Catch</string>
    <string name="settings_main_clean_catch_dialog_content_text">After cache cleaning, some data may need to be reloaded to display. Are you sure you want to clear the cache?</string>
    <string name="settings_main_help_center_text">Help Center</string>
    <string name="settings_main_about_text">About APP</string>
    <string name="settings_main_logout_btn_text">Exit Login</string>
    <string name="settings_user_info_top_navigation_title_text">Personal Information</string>
    <string name="settings_user_info_change_head_portrait_image_text">Change head portrait</string>
    <string name="settings_user_info_change_nickname_text">Nickname</string>
    <string name="settings_user_info_change_sex_text">Sex</string>
    <string name="settings_user_info_change_birthday_text">Date of birth</string>
    <string name="settings_user_info_change_city_text">Stay City</string>
    <string name="settings_user_info_change_personalized_signature_text">Personalized_signature</string>
    <string name="settings_receive_address_list_activity_top_navigation_title_text">Receive Address Setting</string>
    <string name="settings_receive_address_top_navigation_add_btn_text">Add</string>
    <string name="settings_help_center_list_activity_top_navigation_title_text">Help Center</string>
    <string name="settings_about_app_top_navigation_title_text">About App</string>
    <string name="settings_about_app_copyright_text">Copyright information</string>
    <string name="settings_about_app_service_agreement_text">Explore Future Platform Service Agreement</string>
    <string name="settings_about_app_privacy_policy_text">Privacy Policy</string>
    <string name="mine_interaction_list_activity_top_navigation_title_text">My Interaction</string>
    <string name="mine_interaction_list_activity_top_sort_history_btn_text">History</string>
    <string name="mine_interaction_list_activity_top_sort_comment_btn_text">Comment</string>
    <string name="mine_interaction_list_activity_top_sort_retransmission_btn_text">Retransmission</string>
    <string name="mine_interaction_list_activity_top_sort_collection_btn_text">Collection</string>
    <string name="mine_interaction_list_activity_top_sort_support_btn_text">Support</string>
    <string name="mine_related_user_list_activity_top_navigation_title_text">Related User</string>
    <string name="mine_related_user_list_activity_top_sort_fans_btn_text">Fans</string>
    <string name="mine_related_user_list_activity_top_sort_attention_btn_text">Attention</string>
    <string name="message_list_top_navigation_title_text">Message Center</string>
    <string name="message_list_item_accept_title_text">Accept</string>
    <string name="message_list_item_comment_title_text">Comment</string>
    <string name="message_list_item_support_title_text">Support</string>
    <string name="message_list_item_sell_title_text">Cell</string>
    <string name="message_list_item_platform_title_text">Explore Future</string>
    <string name="message_list_item_logistics_title_text">Logistics Notification</string>
    <string name="login_activity_top_navigation_help_btn_text">Help</string>
    <string name="login_activity_id_edit_hint_text">PhoneNumber/UserID/Email</string>
    <string name="login_activity_password_edit_hint_text">Password</string>
    <string name="login_activity_id_edit_keyboard_enter_text">Next</string>
    <string name="login_activity_password_edit_keyboard_enter_text">Finish</string>
    <string name="login_activity_forget_password_btn_text">Forget Password</string>
    <string name="login_activity_sms_login_btn_text">SMS Login</string>
    <string name="login_activity_new_user_register_btn_text">New User Register</string>
    <string name="content_details_top_navigation_title_text">Details</string>
    <string name="mind_details_bottom_bar_retransmission_btn_text">Retransmission</string>
    <string name="mind_details_bottom_bar_comment_btn_text">Comment</string>
    <string name="mind_details_bottom_bar_accept_btn_text">Accept</string>
    <string name="view_point_details_author_name_text">View Point Author:%1$s</string>
    <string name="view_point_details_release_datetime_text">Release Datetime:%1$s</string>
</resources>