<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/bottom_Navigation_Top_Line"
        android:background="@color/app_navigation_bg_line_color"
        android:layout_width="0dp"
        android:layout_height="@dimen/app_navigation_bg_line_width"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/bottom_Navigation_Recommend_Btn"
        android:text="@string/app_bottom_navigation_recommend_btn_text"
        android:drawableTop="@drawable/vector_drawable_recommend"
        android:textColor="@color/app_bottom_navigation_text_selected_color"
        android:textSize="@dimen/app_bottom_navigation_text_size"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom_Navigation_Top_Line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/bottom_Navigation_Sort_Btn"/>
    <TextView
        android:id="@+id/bottom_Navigation_Sort_Btn"
        android:text="@string/app_bottom_navigation_sort_btn_text"
        android:alpha="0.5"
        android:drawableTop="@drawable/vector_drawable_sort"
        android:textColor="@color/app_bottom_navigation_text_selected_color"
        android:textSize="@dimen/app_bottom_navigation_text_size"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom_Navigation_Top_Line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bottom_Navigation_Recommend_Btn"
        app:layout_constraintRight_toLeftOf="@+id/bottom_Navigation_Mind_Btn"/>
    <TextView
        android:id="@+id/bottom_Navigation_Mind_Btn"
        android:text="@string/app_bottom_navigation_mind_btn_text"
        android:alpha="0.5"
        android:drawableTop="@drawable/vector_drawable_mind"
        android:textColor="@color/app_bottom_navigation_text_selected_color"
        android:textSize="@dimen/app_bottom_navigation_text_size"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom_Navigation_Top_Line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bottom_Navigation_Sort_Btn"
        app:layout_constraintRight_toLeftOf="@+id/bottom_Navigation_Find_Btn"/>
    <TextView
        android:id="@+id/bottom_Navigation_Find_Btn"
        android:text="@string/app_bottom_navigation_find_btn_text"
        android:alpha="0.5"
        android:drawableTop="@drawable/vector_drawable_find"
        android:textColor="@color/app_bottom_navigation_text_selected_color"
        android:textSize="@dimen/app_bottom_navigation_text_size"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom_Navigation_Top_Line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bottom_Navigation_Mind_Btn"
        app:layout_constraintRight_toLeftOf="@+id/bottom_Navigation_Mine_Btn"/>
    <TextView
        android:id="@+id/bottom_Navigation_Mine_Btn"
        android:text="@string/app_bottom_navigation_mine_btn_text"
        android:alpha="0.5"
        android:drawableTop="@drawable/vector_drawable_mine"
        android:textColor="@color/app_bottom_navigation_text_selected_color"
        android:textSize="@dimen/app_bottom_navigation_text_size"
        android:gravity="center_horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottom_Navigation_Top_Line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/bottom_Navigation_Find_Btn"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>