<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_def_theme_activity_bg"
    android:fitsSystemWindows="true"
    tools:context=".login.LoginActivity">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/login_Activity_Top_Navigation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/login_Activity_Top_Navigation_Bottom_Horizontal_Guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:id="@+id/login_Activity_Top_Navigation_Close_Btn"
            android:src="@drawable/vector_drawable_close_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
        <TextView
            android:id="@+id/login_Activity_Top_Navigation_Help_Btn"
            android:text="@string/login_activity_top_navigation_help_btn_text"
            android:textColor="#444444"
            android:textSize="@dimen/mind_edit_top_navigation_text_size"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.Guideline
        android:id="@+id/login_Activity_Top_Navigation_Bottom_Horizontal_Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/app_top_navigation_height" />
    <android.support.constraint.Guideline
        android:id="@+id/login_Activity_Vertical_Guideline_One"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.41" />
    <android.support.constraint.Guideline
        android:id="@+id/login_Activity_Vertical_Guideline_Two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.59" />
    <ImageView
        android:id="@+id/login_Activity_HeadPortrait_Image"
        android:background="@drawable/app_head_portrait_place_image"
        android:scaleType="centerCrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_Activity_Top_Navigation_Bottom_Horizontal_Guideline"
        app:layout_constraintLeft_toRightOf="@id/login_Activity_Vertical_Guideline_One"
        app:layout_constraintRight_toLeftOf="@id/login_Activity_Vertical_Guideline_Two"
        app:layout_constraintDimensionRatio="1:1"/>

    <android.support.constraint.Guideline
        android:id="@+id/login_Activity_Vertical_Guideline_Three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />
    <android.support.constraint.Guideline
        android:id="@+id/login_Activity_Vertical_Guideline_Four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
    <EditText
        android:id="@+id/login_Activity_ID_Edit"
        android:hint="@string/login_activity_id_edit_hint_text"
        android:textColorHint="#888888"
        android:textSize="15dp"
        android:textColor="#555555"
        android:lines="1"
        android:maxLength="20"
        android:textCursorDrawable="@drawable/app_search_box_edit_cursor"
        android:background="@null"
        android:imeActionLabel="@string/login_activity_id_edit_keyboard_enter_text"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/login_Activity_ID_Edit_Bottom_Line"
        app:layout_constraintLeft_toRightOf="@id/login_Activity_Vertical_Guideline_Three"
        app:layout_constraintRight_toLeftOf="@id/login_Activity_Vertical_Guideline_Four"/>
    <View
        android:id="@+id/login_Activity_ID_Edit_Bottom_Line"
        android:background="@color/app_navigation_bg_line_color"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/login_Activity_HeadPortrait_Image"
        app:layout_constraintLeft_toRightOf="@id/login_Activity_Vertical_Guideline_Three"
        app:layout_constraintRight_toLeftOf="@id/login_Activity_Vertical_Guideline_Four"/>
    <EditText
        android:id="@+id/login_Activity_Password_Edit"
        android:hint="@string/login_activity_password_edit_hint_text"
        android:textColorHint="#888888"
        android:textSize="15dp"
        android:textColor="#555555"
        android:lines="1"
        android:maxLength="20"
        android:textCursorDrawable="@drawable/app_search_box_edit_cursor"
        android:background="@null"
        android:imeActionLabel="@string/login_activity_password_edit_keyboard_enter_text"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/login_Activity_Password_Edit_Bottom_Line"
        app:layout_constraintLeft_toRightOf="@id/login_Activity_Vertical_Guideline_Three"
        app:layout_constraintRight_toLeftOf="@+id/login_Activity_Password_Hide_Btn"/>
    <ImageView
        android:id="@+id/login_Activity_Password_Hide_Btn"
        android:src="@drawable/vector_drawable_password_gone"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_Activity_Password_Edit_Bottom_Line"
        app:layout_constraintLeft_toRightOf="@+id/login_Activity_Password_Edit"
        app:layout_constraintRight_toLeftOf="@id/login_Activity_Vertical_Guideline_Four"/>
    <View
        android:id="@+id/login_Activity_Password_Edit_Bottom_Line"
        android:background="@color/app_navigation_bg_line_color"
        android:layout_width="0dp"
        android:layout_height="1px"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/login_Activity_ID_Edit_Bottom_Line"
        app:layout_constraintLeft_toRightOf="@id/login_Activity_Vertical_Guideline_Three"
        app:layout_constraintRight_toLeftOf="@id/login_Activity_Vertical_Guideline_Four"/>
    <TextView
        android:id="@+id/login_Activity_Forget_Password_Btn"
        android:text="@string/login_activity_forget_password_btn_text"
        android:textColor="#555555"
        android:textSize="12dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_Activity_Password_Edit_Bottom_Line"
        app:layout_constraintRight_toLeftOf="@id/login_Activity_Vertical_Guideline_Four"/>

    <Button
        android:id="@+id/login_Activity_Login_Btn"
        android:text="@string/app_login_btn_text"
        android:textColor="#FFFFFF"
        android:background="@drawable/login_btn_bg"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/login_Activity_Forget_Password_Btn"
        app:layout_constraintLeft_toRightOf="@id/login_Activity_Vertical_Guideline_Three"
        app:layout_constraintRight_toLeftOf="@id/login_Activity_Vertical_Guideline_Four"/>

</android.support.constraint.ConstraintLayout>