<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/view_Point_Details_Content_Text"
        android:text="@string/recommend_mind_content_empty_text"
        android:textColor="@color/app_mind_content_item_text_color"
        android:textSize="@dimen/app_mind_content_item_text_size"
        android:maxLength="@dimen/app_mind_content_item_text_max_length"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/view_Point_Details_Content_Image"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/view_Point_Details_Content_Text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <View
        android:id="@+id/view_Point_Details_Content_Bg_Line"
        android:background="@color/attention_common_item_divider_line_color"
        android:layout_width="0dp"
        android:layout_height="@dimen/attention_item_bg_line_width"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/view_Point_Details_Content_Image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:id="@+id/view_Point_Details_Author_Name"
        android:text="@string/view_point_details_author_name_text"
        android:textColor="@color/app_mind_content_item_text_color"
        android:textSize="@dimen/app_mind_content_item_text_size"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/view_Point_Details_Content_Bg_Line"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/view_Point_Details_Release_Datetime"
        android:text="@string/view_point_details_release_datetime_text"
        android:textColor="@color/app_mind_content_item_text_color"
        android:textSize="@dimen/app_mind_content_item_text_size"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintTop_toBottomOf="@id/view_Point_Details_Author_Name"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <View
        android:id="@+id/view_Point_Details_Divider_Line"
        android:background="@color/app_mind_content_item_divider_line_color"
        android:layout_width="0dp"
        android:layout_height="@dimen/app_mind_content_content_item_divider_line_width"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/view_Point_Details_Release_Datetime"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>